# bsescraper

./: LICENSE  README.md  pyproject.toml
src/bsescraper/: __init__.py
src/bsescraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
